<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/colorOrange"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/twentyfive_dp"
            android:paddingEnd="@dimen/twentyfive_dp"
            android:orientation="vertical">

        <com.careapp.views.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/ic_launcher"
                app:txt_font_type="bold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sixteen_sp"
                android:padding="@dimen/five_dp"
                android:drawablePadding="@dimen/five_dp"
                android:text="@string/welcome_to_care"/>

        <com.careapp.views.AppEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_background"
                android:paddingTop="@dimen/ten_dp"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingStart="@dimen/twenty_dp"
                android:paddingEnd="@dimen/twenty_dp"
                android:layout_marginStart="@dimen/fifteen_dp"
                android:layout_marginEnd="@dimen/fifteen_dp"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:textSize="@dimen/fifteen_sp"
                android:textColor="@color/colorBlack"
                android:inputType="text"
                android:textColorHint="@color/color_vDarkGrey"
                android:hint="@string/username"/>

        <com.careapp.views.AppEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_background"
                android:paddingTop="@dimen/ten_dp"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingStart="@dimen/twenty_dp"
                android:paddingEnd="@dimen/twenty_dp"
                android:layout_marginStart="@dimen/fifteen_dp"
                android:layout_marginEnd="@dimen/fifteen_dp"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:textSize="@dimen/fifteen_sp"
                android:textColor="@color/colorBlack"
                android:inputType="textPassword"
                android:textColorHint="@color/color_vDarkGrey"
                android:hint="@string/password"/>

        <com.careapp.views.AppTextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_green"
                android:gravity="center"
                android:minWidth="@dimen/one_twentyfive_dp"
                android:padding="@dimen/eight_dp"
                android:longClickable="false"
                android:textIsSelectable="false"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:textSize="@dimen/fifteen_sp"
                android:textColor="@color/colorWhite"
                android:inputType="text"
                android:textColorHint="@color/colorWhite"
                android:text="@string/login"/>

    </LinearLayout>

</layout>
